Fix image alignment

--- a/style.css
+++ b/style.css
@@ -248,12 +248,15 @@ body {
 
 .featured-speaker-card {
     display: flex;
+    align-items: center;
     gap: 1rem;
 }
 
 .featured-speakers-container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+
     padding: 1rem 0;
     gap: 1rem;
 }
